# wirebug

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bacon.toml  install.sh
.agents/skills/wirebug-dsl/: SKILL.md
.claude/plans/: sunny-foraging-twilight.md
.claude/skills/wirebug-dsl/: SKILL.md
.github/: copilot-instructions.md
.github/skills/wirebug-dsl/: SKILL.md
.github/workflows/: ci.yml  quality-checks.yml  release.yml
editors/vscode/: .vscodeignore  LICENSE.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: wirebug.tmLanguage.json
examples/: hv.wb  main.wb  model.yaml  wirebug.toml
examples/components/: bms_master.wb  cell_module.wb  connectors.wb  contactor.wb  e_stop.wb  front_battery.wb  fuse_box.wb  hv_junction_box.wb  inverter.wb  motor.wb  msd.wb  obc_dcdc.wb  rear_battery.wb  resistor.wb  vcm.wb
examples/components/battery/: bms_master.wb  cell_module.wb  contactor.wb  front_battery.wb  resistor.wb
examples/components/hv/: charge_inlet.wb  inverter.wb  motor.wb  obc_dcdc.wb
examples/components/lv/: brake_light.wb  brake_sensor.wb  coolant_pump.wb  fuse_box.wb  gear_lever.wb  key_switch.wb  lv_battery.wb  pedal.wb  radiator_fan.wb  vcm.wb
examples/looms/: ac_charge.wb  brake_branch.wb  engine_bay.wb  gear_branch.wb  key_branch.wb  pedal_branch.wb  tunnel.wb
examples/systems/: can.wb  cooling.wb  lighting.wb  lv.wb  safety.wb  traction.wb
examples/views/: hv_overview.yaml
src/: cli.rs  error.rs  lib.rs  main.rs  model.rs  view.rs
src/dsl/: mod.rs  span.rs
src/dsl/ast/: mod.rs
src/dsl/diagnostics/: mod.rs
src/dsl/elaborate/: mod.rs
src/dsl/ir/: mod.rs
src/dsl/lex/: mod.rs  token.rs
src/dsl/manifest/: git.rs  mod.rs
src/dsl/parse/: mod.rs
src/dsl/project/: mod.rs
src/dsl/resolve/: merge.rs  mod.rs  refs.rs  register.rs  scopes.rs  views.rs
src/dsl/validate/: mod.rs
src/lsp/: complete.rs  definition.rs  diagnostics.rs  line_index.rs  mod.rs  state.rs  uri.rs
src/render/: color.rs  geometry.rs  mod.rs  pdf.rs  png.rs  schematic.rs  stamp.rs
src/serve/: build.rs  livereload.rs  mod.rs  server.rs  state.rs  watcher.rs
templates/: index.html
tests/: basic_project.rs  check_examples.rs  cli.rs  inline_project.rs  lsp.rs  render_example.rs  split_project.rs
tests/snapshots/: render_example__parsed_example_model_snapshot.snap
(+32 files in other folders)
