[package]
name = "wirebug"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = { version = "2.14.0", features = ["serde"] }
pathfinding = "4.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
svg = "0.18.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
predicates = "3.1.4"
tempfile = "3.27.0"
