[package]
name = "wirebug"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chumsky = "0.13.0"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = "2.14.0"
miette = { version = "7.6.0", features = ["fancy"] }
pathfinding = "4.15.0"
svg = "0.18.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
predicates = "3.1.4"
tempfile = "3.27.0"
