[package]
name = "wirebug"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Text-defined electrical schematics and wiring harnesses from a small DSL"
repository = "https://github.com/LHelge/wirebug"
homepage = "https://github.com/LHelge/wirebug"
readme = "README.md"
keywords = ["schematic", "wiring", "harness", "svg", "dsl"]
categories = ["command-line-utilities", "visualization"]
include = [
    "src/**",
    "templates/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
anyhow = "1.0.102"
askama = "0.16.0"
axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.44", features = ["serde"] }
chumsky = "0.13.0"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = "2.14.0"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
miette = { version = "7.6.0", features = ["fancy"] }
notify = "8.2.0"
pathfinding = "4.15.0"
pdf-writer = "0.12"
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
svg = "0.18.0"
svg2pdf = "0.13"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "time"] }
toml = "1.1.2"
tower-http = { version = "0.6.11", features = ["set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
predicates = "3.1.4"
tempfile = "3.27.0"
